# EnemyNations

./: .clang-format  .gitignore  Additional documentation.txt  CMakeLists.txt  license.txt  readme.adoc
compress/: CMakeLists.txt  compit.ncb  lzwcodec.h  main.cpp  stdafx.h
compress/comptest/: comptest.mak  comptest.mdp  comptest.ncb  lzwcodec.cpp
enations_latest/src/: CMakeLists.txt  CdLoc.cpp  CdLoc.h  DlgMsg.cpp  DlgMsg.h  DlgReg.cpp  DlgReg.h  Lastplnt.aps  PlyrList.cpp  PlyrList.h  UpgradeLog.htm  advanced.cpp  advdlg.cpp  advdlg.h  ai.cpp  area.cpp  area.h  base.h  bitmaps.h  bmbutton.cpp  bmbutton.h  bridge.cpp  bridge.h  building.h  building.inl  cai.h  caicopy.cpp  caicopy.hpp  caidata.cpp  caidata.hpp  caigmgr.cpp  caigmgr.hpp  caigoal.cpp  caigoal.hpp  caigoalm.hpp  caihex.cpp  caihex.hpp  caiinit.cpp  caiinit.hpp  cailog.cpp  (+157 more)
enations_latest/src/network/: _davenet.h  makefile  mssccprj.scc  netbios.cpp  resource.h  stdafx.h
enations_latest/src/res/: version.rc
enations_latest/src/trap/: vc60.idb
enations_latest/src/uthunk/: Universal thunks, Win32 to Win16 on Win32s.txt  dave16ut.cpp  dave32ut.def  dave32ut.h  libentry.asm  makefile.32  mssccprj.scc
makeriff/: CMakeLists.txt  MAKERIFF.mdp  fixpoint.h  makeriff.cpp  makeriff.vcxproj  makeriff.vcxproj.filters  mssccprj.scc  rifffile.cpp  rifffile.h
sprite/: CMakeLists.txt  bd.cpp  bd.h  bk.bat  bmpfile.cpp  boxsplit.cpp  boxsplit.h  bpecodec.cpp  cdirdlg.cpp  cdirdlg.h  codec.cpp  common.h  dither.h  drawdib.cpp  drawsurf.h  formats.txt  holdtime.cpp  holdtime.h  image.cpp  image.h  lzsscode.h  lzwcodec.h  mainfrm.cpp  mainfrm.h  namngdlg.cpp  namngdlg.h  paldoc.cpp  palview.cpp  palview.h  progdlg.cpp  quant.h  resource.h  sp.h  splitwnd.h  spprop.cpp  spprop.h  sprcnvrt.cpp  sprd.cpp  sprd.h  sprite.clw  (+19 more)
src/cdf/: BK.BAT  CMakeLists.txt  Cdf.mak  Cdf.mdp  Cdf.ncb  TEST.TXT  cdf.cpp
tools/vdmplay/: .clang-tidy  BINDLVR.BAT  BUILD32.BAT  CLRFILE.CVW  CMakeLists.txt  CR.BAT  CURRENT.STS  DEFAULT.TAG  DELIVER.BAT  FIXDLL.BAT  MAKEFILE  MAKEFILE.VC4  MAKEINCL.VC4  MSVC40.BAT  MTLLW.LIB  MTLLWG.LIB  MTLUD.LIB  MTLUDG.LIB  NEWDLVR.BAT  README.TXT  T.TXT  TONETP2.BAT  TWSIPX.VCP  VDMPLAY.CLW  VDMPLAY.INI  VDMPLAY.MAK  VDMPLAY.SBT  VDMPLAY.TXT  VDMPLAY.VCP  VDMPLUI.MAK  VER32.APS  VERSION.APS  VMPLAY.TXT  VPCOPY.BAT  VPDEMO.CLW  VPLOG1.TXT  Vdmplay.aps  W16COMM.SBT  XTONETP2.BAT  ZIPEXCL.TXT  (+123 more)
tools/vdmplay/ISERVE/: CMakeLists.txt  ISERVDLG.CPP  ISERVDLG.H  ISERVE.APS  ISERVE.CLW  ISERVE.CPP  ISERVE.H  ISERVE.MAK  ISERVE.RC  ISERVE.VCP  ISERVEDS.MAK  ISERVEDS.MDP  README.TXT  RESOURCE.H  STDAFX.CPP  STDAFX.H  VDMPLAY.INI  mssccprj.scc
tools/vdmplay/UT/: BUILD16.BAT  DIALOG.RC  FTR  HDR  MSVC.BND  RESOURCE.H  RESOURCE.HHH  STDAFX.HHH  T  VDMPL16.DEF  VDMPL16.LIB  VDMPL16.MAK  VDMPL16.WSP  VDMPL32.CPP  VDMPL32.DEF  VDMPL32.EXP  VDMPL32.LIB  VDMPL32.MAK  VDMPL32.VCP  VDMPL3~1.MAK  VDMPL3~1.MDP  VDMPL3~1.ncb  VDMPLAY  VDMPLAY.LIB  VDMPLUT.H  VER16.APS  VER16.RC  VER16.RES  VER32.RC  VPUT16.CPP  W32SUT.H  commnet.sbr  datalink.sbr  ipx16net.sbr  ipx16stb.sbt  mssccprj.scc  nbnet.sbr  smap.sbr  tcpnet.sbr  vdmplay.exp  (+5 more)
tools/vdmplay/VDMPLUI/: CMakeLists.txt  RESOURCE.H  STDAFX.CPP  VDMPLUI.CPP  VDMPLUI.DEF  VDMPLUI.H  VDMPLUI.LIB  mssccprj.scc
tools/vdmplay/VPDEMO/: DEMCPYR.BAT  DEMOCOPY.BAT  LOADTEST.CPP  LOADTEST.H  NBDLG.CPP  NBDLG.H  README.TXT  RESOURCE.H  STDAFX.CPP  STDAFX.H  TCPIPXDL.CPP  TCPIPXDL.H  TSIMCFG.CPP  VDMPLAY.INI  VPDEMDLG.CPP  VPDEMDLG.H  VPDEMO  VPDEMO.APS  VPDEMO.CLW  VPDEMO.CPP  VPDEMO.H  VPDEMO.MAK  VPDEMO.RC  VPDEMO.VCP  VPDEMODS.MAK  VPDEMODS.MDP  mssccprj.scc
tools/vdmplay/VPDIAG/: CMakeLists.txt  DLG1.CPP  DLG1.H  NBDLG.CPP  NBDLG.H  NET.CPP  NET.H  README.TXT  STDAFX.CPP  TCPDLG.CPP  TCPDLG.H  VPDIAG.CLW  VPDIAG.CPP  VPDIAG.CXX  VPDIAG.H  VPDIAG.MAK  VPDIAG.mdp  VPDIAG.ncb  VPDIAGDL.CPP  VPDIAGDL.H  mssccprj.scc  resource.h  vpdiag.aps  vpdiag.rc
tools/vdmplay/VPTEST/: COMMTST.MAK  COMMTST.VCP  GAMENET.H  GNSESS.H  JOINDIAL.CPP  JOINDIAL.H  MAINFRM.CPP  PSDNET.CPP  PSDNET.H  README.TXT  RESOURCE.H  RESOURSE.H  SENDMSGD.CPP  SENDMSGD.H  STDAFX.CPP  TCOMM.CPP  TFRMWK.CPP  TIPX16.CPP  TIPX16.DEF  TIPX16.MAK  TIPX16.WSP  TNBNET.CPP  TNBNET.MAK  TNBNET.VCP  TUDP.CPP  TUDP.MAK  TUDP.VCP  TUDP_C~1.CPP  TWSIPX.CPP  TWSIPX.MAK  TWSKNET.CPP  TWSKNET.MAK  TWSKNET.VCP  VDMPLAY.INI  VPTESDOC.CPP  VPTESDOC.H  VPTEST.APS  VPTEST.CLW  VPTEST.CPP  VPTEST.H  (+22 more)
tools/vdmplay/hlp/: RHHC.BAT  VDMPLAY.DOC  VDMPLAY.ERR  VDMPLAY.HLP  VDMPLAY.HPJ  VDMPLAY.RBH  VDMPLAY.RTA  VDMPLAY.RTF  VDMPLAY.RTK  VDMPLAY.RTS  vdmplay.hh
tools/vdmplay/novsdk/: DIAG.H  IPXCALLS.H  IPXERROR.H  NCB.H  NETBIOS.H  NETCONS.H  NETERR.H  NPCALLS.H  NTYPES.H  NWACCT.H  NWAFP.H  NWALIAS.H  NWAUDIT.H  NWBINDRY.H  NWCALDEF.H  NWCALLS.H  NWCALLS.LIB  NWCONFIG.H  NWCONNEC.H  NWDEL.H  NWDENTRY.H  NWDIAG.H  NWDIRECT.H  NWDPATH.H  NWDSACL.H  NWDSASA.H  NWDSATTR.H  NWDSAUD.H  NWDSBUFT.H  NWDSDC.H  NWDSDEFS.H  NWDSDSA.H  NWDSFILT.H  NWDSMISC.H  NWDSNAME.H  NWDSNMTP.H  NWDSPART.H  NWDSSCH.H  NWDSTYPE.H  NWEA.H  (+57 more)
tools/vdmplay/rw/: BINTREE.H  BITVEC.H  BSTREAM.H  COLLINT.H  COLLSTR.H  COLLTIME.H  CSTRING.H  CTOKEN.H  DEFS.H  DISKPAGE.H  DISKTREE.H  DLIST.H  FACTORY.H  FILEMGR.H  GDLIST.H  GENERIC.H  GORDVEC.H  GQUEUE.H  GSORTVEC.H  GSTACK.H  GVECTOR.H  IDENDICT.H  IDENSET.H  IDLIST.H  ISLIST.H  ITERATOR.H  MEMCK.H  MEMPOOL.H  MESSAGE.H  MUTEX.H  PVECTOR.H  REF.H  RSTREAM.H  RWASSERT.H  RWBAG.H  RWDATE.H  RWFILE.H  RWINT.H  SLIST.H  STACKCOL.H  (+34 more)
tools/vdmplay/test/: VDMPLAY.INI
tools/vdmplay/vdmplayds/: Resource.h  StdAfx.cpp  vdmplayds.clw  vdmplayds.cpp  vdmplayds.def  vdmplayds.h  vdmplayds.mak  vdmplayds.mdp  vdmplayds.ncb  vdmplayds.rc
windward/wind22/: CMakeLists.txt  cpp.hint  dibwnd.cpp
windward/wind22/include/: _debug.h  _error.h  _help.h  _msgs.h  _windwrd.h  acmutil.h  bitbuffe.h  blt.h  bpecodec.h  btree.h  cache.h  codec.h  datafile.h  dave32ut.h  dib.h  dibwnd.h  dlgmsg.h  fixpoint.h  flcanim.h  flcctrl.h  games.h  huffmanc.h  init.h  logging.h  lzsscode.h  lzwcodec.h  mmio.h  mmio.inl  music.h  ptr.h  rand.h  scanlist.h  (+8 more)
(+6801 files in other folders)
